// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Formgroup /> should render correctly 1`] = `
<div>
  <div
    class="formgroup"
  >
    <label
      class="formgroup--legend"
    >
      Label text
    </label>
    <div
      class="formgroup--content"
    >
      <p>
        Some child
      </p>
    </div>
  </div>
</div>
`;

exports[`<Formgroup /> should render correctly when inline 1`] = `
<div>
  <div
    class="formgroup -inline"
  >
    <label
      class="formgroup--legend"
    >
      Label text
    </label>
    <div
      class="formgroup--content"
    >
      <p>
        Some child
      </p>
    </div>
  </div>
</div>
`;

exports[`<Formgroup /> should render correctly with a custom CSS class name 1`] = `
<div>
  <div
    class="formgroup some-custom-class"
  >
    <label
      class="formgroup--legend"
    >
      Label text
    </label>
    <div
      class="formgroup--content"
    >
      <p>
        Some child
      </p>
    </div>
  </div>
</div>
`;

exports[`<Formgroup /> should render correctly with an error 1`] = `
<div>
  <div
    class="formgroup -invalid"
  >
    <label
      class="formgroup--legend"
    >
      Label text
    </label>
    <span
      class="text formgroup--error -small -danger"
    >
      You must select an option
    </span>
    <div
      class="formgroup--content"
    >
      <p>
        Some child
      </p>
    </div>
  </div>
</div>
`;
